@@ -18,6 +18,8 @@
 
 #define MODVLAD_REALM           "VLAD"
 
+#define MODVLAD_USERDATA_KEY    "mod_vlad_init"
+
 #define MODVLAD_XML_HEADER      "<?xml version=\"1.0\" encoding=\"utf-8\"?>"
 #define MODVLAD_CONTENT_HEADER  "text/html; charset=\"utf-8\""
 #define MODVLAD_DOCTYPE_HEADER  "<!DOCTYPE HTML PUBLIC \"-//W3C// DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-html40/strict.dtd\">"
